# dnsbl-proxy

./: Makefile.am  config.h.in  configure.ac
conf/: Makefile.am  dnsbl-proxy.conf.tpl
debian/: README  README.source  changelog  control  copyright  files  ospow-dnsbl-proxy.postinst  ospow-dnsbl-proxy.postinst.debhelper  ospow-dnsbl-proxy.postrm.debhelper  ospow-dnsbl-proxy.prerm.debhelper
debian/ospow-dnsbl-proxy/DEBIAN/: conffiles  config  control  md5sums  postinst  postrm  prerm  templates
debian/ospow-dnsbl-proxy/etc/init.d/: ospow-dnsbl-proxy
debian/ospow-dnsbl-proxy/usr/share/doc/ospow-dnsbl-proxy/: README.Debian
src/: .config.c.swp  Makefile.am  Makefile.in  cache.c  config.c  config.h  dns.c  dns.h  main.c  test-tools  tests.c  tools.c  tools.h  types.h
